--- a/src/main/resources/templates/potvrdenie.html
+++ b/src/main/resources/templates/potvrdenie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sk">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +16,7 @@
     <div style="height:3rem;"></div>
 
     <div style="display: flex; justify-content: center;">
-        <a href="rezervacia"
+        <a href=""
            class="button">Rezervovať ďalší lístok
         </a>
     </div>
