--- a/src/main/resources/templates/rezervacia.html
+++ b/src/main/resources/templates/rezervacia.html
@@ -57,11 +57,11 @@
                 <fieldset style="margin-top:1rem;">
                     <legend>Typ lístka:</legend>
                     <label>
-                    <input type="radio" name="ticket-type" value="student" checked required>
+                    <input type="radio" name="ticketType" value="STUDENT" checked required>
                     Študentský
                     </label>
                     <label>
-                    <input type="radio" name="ticket-type" value="nonstudent" required>
+                    <input type="radio" name="ticketType" value="NESTUDENT" required>
                     Neštudentský
                     </label>
                 </fieldset>
