--- a/src/main/resources/templates/mail/potvrdenie-rezervacie.html
+++ b/src/main/resources/templates/mail/potvrdenie-rezervacie.html
@@ -19,7 +19,7 @@
     <div style="height:0.25rem;"></div>
 
     <p>
-        <a th:href="${'olv-mat.upcba.sk/listok/' + ticketId + '?securityKey=' + securityKey}">
+        <a th:href="${'olv-mat.upcba.sk/ticket/' + ticketId + '?securityKey=' + securityKey}">
             Tu môžeš sledovať stav svojho lístka
         </a>
     </p>
