--- a/src/main/resources/templates/rezervacia.html
+++ b/src/main/resources/templates/rezervacia.html
@@ -21,7 +21,7 @@
             Už <strong>28. novembra</strong> bude naše UPeCe znieť ľudovými tancami a piesňami.
             Ak si toto nechceš nechať ujsť, tu si môžeš zarezervovať lístok.
             Jednoducho <strong>vyplň formulár</strong> a lístok budeš mať rezervovaný.
-            Následne prídeš do <strong>Libressa</strong>, ktorýkoľvek <strong>pracovný deň hodinku pred svätou omšou</strong>,
+            Následne prídeš do <strong>Libressa</strong>, ktorýkoľvek <strong>pracovný deň 30 minút po sväte omši</strong>,
             kde nám dáš svoj príspevok a my ti lístok aktivujeme.
             </p>
 
@@ -30,8 +30,8 @@
 
             <p><strong>Odporúčaný príspevok:</strong></p>
 
-            <pre>  -  8€  Študent</pre>
-            <pre>  - 16€  Neštudent</pre>
+            <pre>  -  10€  Študent</pre>
+            <pre>  -  20€  Neštudent</pre>
             <div style="height:1.25rem;"></div>
 
 
