--- a/src/main/resources/templates/potvrdenie.html
+++ b/src/main/resources/templates/potvrdenie.html
@@ -10,8 +10,11 @@
 <body>
 <div class="obal">
     <h1>Ďakujeme za Vašu rezerváciu</h1>
-    <h2>Vaša rezervácia bola úspešne prijatá</h2>
-    <h2>Podrobnosti sme Vám poslali e-mailom</h2>
+
+    <p>Vaša rezervácia bola úspešne prijatá. Podrobnosti sme Vám poslali e-mailom.</p>
+    <div style="height:2rem;"></div>
+
+    <p>V prípade že vám žiadny email nepriešiel, zastavte sa u našich vydávačov lístkov od 17.11. niektorý pracovný deň po svätej omši.</p>
 
     <div style="height:3rem;"></div>
 
