--- a/src/main/resources/templates/mail/potvrdenie-rezervacie.html
+++ b/src/main/resources/templates/mail/potvrdenie-rezervacie.html
@@ -33,9 +33,9 @@
 
     <div style="height:0.25rem;"></div>
 
-    <p>
+    <p >
         <a class="button" th:href="${'olv-mat.upcba.sk/ticket/' + ticketId + '?securityKey=' + securityKey}">
-            Tu môžeš sledovať stav svojho lístka
+            <span style="color: #fafafa;">Tu môžeš sledovať stav svojho lístka</span>
         </a>
     </p>
 
