--- a/src/main/resources/templates/potvrdenie.html
+++ b/src/main/resources/templates/potvrdenie.html
@@ -14,7 +14,7 @@
     <p>Vaša rezervácia bola úspešne prijatá. Podrobnosti sme Vám poslali e-mailom.</p>
     <div style="height:2rem;"></div>
 
-    <p>V prípade, že vám žiadny email nepriešiel, zastavte sa u našich vydávačov lístkov od 17.11. niektorý pracovný deň po svätej omši.</p>
+    <p>V prípade, že vám žiadny email neprišiel, zastavte sa u našich vydávačov lístkov od 17.11. niektorý pracovný deň po svätej omši.</p>
 
     <div style="height:3rem;"></div>
 
