--- a/src/main/resources/templates/rezervacia.html
+++ b/src/main/resources/templates/rezervacia.html
@@ -21,7 +21,7 @@
             Už <strong>28. novembra</strong> bude naše UPeCe znieť ľudovými tancami a piesňami.
             Ak si toto nechceš nechať ujsť, tu si môžeš zarezervovať lístok.
             Jednoducho <strong>vyplň formulár</strong> a lístok budeš mať rezervovaný.
-            Následne prídeš do <strong>Libressa</strong>, ktorýkoľvek <strong>pracovný deň 30 minút po sväte omši</strong>,
+            Následne prídeš do <strong>Libressa</strong>, ktorýkoľvek <strong>pracovný deň 30 minút po svätej omši</strong>,
             kde nám dáš svoj príspevok a my ti lístok aktivujeme.
             </p>
 
