--- a/src/main/resources/static/stylesheet.css
+++ b/src/main/resources/static/stylesheet.css
@@ -53,7 +53,8 @@ pre {
 
 
 input[type="text"],
-input[type="email"] {
+input[type="email"],
+input[type="password"]{
     width: 100%;
     padding: 0.5rem;
     margin: 0.5rem 0;
