--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -88,7 +88,7 @@
         });
 
         if (!response.ok){
-            alert("Nepodarilo sa potvrdiť zaplatenie - lístok už je zaznamenaný ako zaplatený.")
+            alert("Nepodarilo sa potvrdiť zaplatenie - lístok už je zaznamenaný ako zaplatený. Prosím znovunačítaj stránku.")
         }
 
         await renderTable();
