pridane hromadne nahrávanie teamákov a dobrovoľníkov

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -18,12 +18,12 @@
     </div>
 
     <input type="text" id="search" placeholder="Vyhľadať podľa mena alebo priezviska...">
-    
+
     <label style="margin-top: 0rem; margin-bottom: 1.5rem;">
         <input type="checkbox" id="filter-nezaplatene">
         Zobraziť iba nezaplatené lístky
     </label>
-    
+
     <table id="reservations">
         <colgroup>
             <col style="width: 165px">
@@ -44,6 +44,21 @@
         </thead>
         <tbody></tbody>
     </table>
+
+    <h3>
+        Nahratie dobrovoľníkov a teamákov
+    </h3>
+    <form method="post" enctype="multipart/form-data">
+        <fieldset>
+            <legend>Nahrávam:</legend>
+            <input type="radio" name="typ" id="dobrovolnik" value="DOBROVOLNIK"><label
+                for="dobrovolnik">Dobrovoľníkov</label>
+            <input type="radio" name="typ" id="team" value="TEAM" checked><label for="team">Teamákov</label>
+        </fieldset>
+        <input type="file" name="subor" placeholder="Tu nahraj súbor">
+
+        <button type="submit">Nahraj lístky</button>
+    </form>
 </div>
 
 <script>
@@ -79,7 +94,6 @@
         if (!res) return;
 
 
-
         const ok = confirm(`Naozaj chceš potvrdiť platbu pre: ${res.meno}?`);
         if (!ok) return; // ak klikne na "Zrušiť", nič sa nezmení
 
@@ -87,7 +101,7 @@
             method: 'PUT'
         });
 
-        if (!response.ok){
+        if (!response.ok) {
             alert("Nepodarilo sa potvrdiť zaplatenie - lístok už je zaznamenaný ako zaplatený. Prosím znovunačítaj stránku.")
         }
 
@@ -95,15 +109,15 @@
     }
 
 
-    document.getElementById('search').addEventListener('input', function() {
+    document.getElementById('search').addEventListener('input', function () {
         runFilter();
     });
 
-    document.getElementById('filter-nezaplatene').addEventListener('input', function() {
+    document.getElementById('filter-nezaplatene').addEventListener('input', function () {
         runFilter();
     });
 
-    function runFilter(){
+    function runFilter() {
         const filter = document.getElementById('search').value.toLowerCase();
         const nezaplateneFilterChecked = document.getElementById('filter-nezaplatene').checked;
         const rows = document.querySelectorAll('#reservations tbody tr');
@@ -111,20 +125,21 @@
             let disp = '';
 
 
-            if(nezaplateneFilterChecked) {
+            if (nezaplateneFilterChecked) {
                 if (row.cells[3].textContent.trim() !== 'REZERVOVANY') {
                     disp = 'none'
                 }
             }
 
 
-            if(disp !== 'none'){
+            if (disp !== 'none') {
                 const name = row.cells[0].textContent.toLowerCase();
                 disp = name.includes(filter) ? '' : 'none';
             }
             row.style.display = disp;
         });
     }
+
     renderTable();
 </script>
 </body>
