--- a/src/main/resources/static/stylesheet.css
+++ b/src/main/resources/static/stylesheet.css
@@ -143,3 +143,53 @@ th {
 tr:hover {
     background: #f0f0f0;
 }
+
+
+
+
+
+.toggle-line {
+    display: flex;
+    margin-bottom: 1rem;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    user-select: none;
+}
+/* hide default checkbox */
+.toggle-line input {
+    display: none;
+}
+/* toggle background */
+.toggle {
+    width: 54px;
+    height: 28px;
+    background: #c8c8c8;
+    border-radius: 50px;
+    position: relative;
+    transition: background 0.25s;
+}
+/* toggle knob */
+.toggle::after {
+    content: "";
+    width: 22px;
+    height: 22px;
+    background: #fafafa;
+    border-radius: 50%;
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    transition: transform 0.25s;
+}
+/* checked state */
+.toggle-line input:checked + .toggle {
+    background: #2864f0;
+}
+.toggle-line input:checked + .toggle::after {
+    transform: translateX(26px);
+}
+/* text and count */
+.text {
+    font-size: 15px;
+    color: #000000;
+}
