--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -18,12 +18,13 @@
     </div>
 
     <input type="text" id="search" placeholder="Vyhľadať podľa mena alebo priezviska...">
-    
-    <label style="margin-top: 0rem; margin-bottom: 1.5rem;">
-        <input type="checkbox" id="filter-nezaplatene">
-        Zobraziť iba nezaplatené lístky
+
+    <label class="toggle-line" style="margin-top: 0;">
+        <input type="checkbox" id="filter-nezaplatene" checked>
+        <span class="toggle"></span>
+        <span class="text">Zobraziť iba nezaplatené</span>
     </label>
-    
+
     <table id="reservations">
         <colgroup>
             <col style="width: 165px">
