--- a/src/main/resources/templates/mail/admin-registracia-superadmin.html
+++ b/src/main/resources/templates/mail/admin-registracia-superadmin.html
@@ -1,5 +1,21 @@
 <!DOCTYPE html>
 <html lang="sk" xmlns:th="http://www.thymeleaf.org">
+<head>
+<style>
+    .button {
+        display: inline-block;
+        padding: 0.75rem 1.25rem;
+        border-radius: 15px;
+
+        background: #2864f0;
+        color: #fafafa;
+        text-decoration: none;
+
+        cursor: pointer;
+        transition: background 0.25s ease;
+    }
+</style>
+</head>
 
 <body>
 <h2>Nová žiadosť o registráciu admina</h2>
@@ -11,8 +27,8 @@
 </p>
 
 <p>
-    <a th:href="${url}">
-        Tu môžeš potvrdiť registráciu
+    <a class="button" th:href="${url}">
+        <span style="color: #fafafa;">Tu môžeš potvrdiť registráciu</span>
     </a>
 </p>
 </body>
