update emailov a admin stranky (#5)
Co-authored-by: Tadeáš Kapina <tadeas.kapina4@gmail.com>

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -19,9 +19,10 @@
 
     <input type="text" id="search" placeholder="Vyhľadať podľa mena alebo priezviska...">
 
-    <label style="margin-top: 0; margin-bottom: 1.5rem;">
-        <input type="checkbox" id="filter-nezaplatene">
-        Zobraziť iba nezaplatené lístky
+    <label class="toggle-line" style="margin-top: 0;">
+        <input type="checkbox" id="filter-nezaplatene" checked>
+        <span class="toggle"></span>
+        <span class="text">Zobraziť iba nezaplatené</span>
     </label>
 
     <table id="reservations">
