--- a/src/main/resources/templates/mail/admin-registracia-superadmin.html
+++ b/src/main/resources/templates/mail/admin-registracia-superadmin.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="sk" xmlns:th="http://www.thymeleaf.org">
 <head>
-<style>
-    .button {
-        display: inline-block;
-        padding: 0.75rem 1.25rem;
-        border-radius: 15px;
+    <style>
+        .button {
+            display: inline-block;
+            padding: 0.75rem 1.25rem;
+            border-radius: 15px;
 
-        background: #2864f0;
-        color: #fafafa;
-        text-decoration: none;
+            background: #2864f0;
+            color: #fafafa;
+            text-decoration: none;
 
-        cursor: pointer;
-        transition: background 0.25s ease;
-    }
-</style>
+            cursor: pointer;
+            transition: background 0.25s ease;
+        }
+    </style>
 </head>
 
 <body>
@@ -23,7 +23,8 @@
 <div style="height:0.25rem;"></div>
 
 <p>
-    Užívateľ požiadal o registráciu nového účtu na správu lístkov na mail: <span style="font-style: italic" th:text="${email}"></span>
+    Užívateľ požiadal o registráciu nového účtu na správu lístkov na mail: <span style="font-style: italic"
+                                                                                 th:text="${email}"></span>
 </p>
 
 <p>
