--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -53,11 +53,12 @@
         <fieldset>
             <legend>Nahrávam:</legend>
             <div>
-            <input type="radio" name="typ" id="dobrovolnik" value="DOBROVOLNIK" style="display: inline-block"><label
-                for="dobrovolnik" style="display: inline-block">Dobrovoľníkov</label>
+                <input type="radio" name="typ" id="dobrovolnik" value="DOBROVOLNIK" style="display: inline-block"><label
+                    for="dobrovolnik" style="display: inline-block">Dobrovoľníkov</label>
             </div>
             <div>
-                <input type="radio" name="typ" id="team" value="TEAM" checked style="display: inline-block"><label style="display: inline-block" for="team" >Teamákov</label>
+                <input type="radio" name="typ" id="team" value="TEAM" checked style="display: inline-block"><label
+                    style="display: inline-block" for="team">Teamákov</label>
             </div>
         </fieldset>
         <input type="file" name="subor" placeholder="Tu nahraj súbor">
@@ -71,15 +72,15 @@
     const tbody = document.querySelector('#reservations tbody');
 
     async function renderTable() {
-            const response = await fetch("admin/tickets");
+        const response = await fetch("admin/tickets");
 
-            reservations = await response.json();
+        reservations = await response.json();
 
-            tbody.innerHTML = '';
-            reservations.forEach(r => {
-                const tr = document.createElement('tr');
-                tr.dataset.id = r.id;
-                tr.innerHTML = `
+        tbody.innerHTML = '';
+        reservations.forEach(r => {
+            const tr = document.createElement('tr');
+            tr.dataset.id = r.id;
+            tr.innerHTML = `
                             <td style="height: 35px">${r.meno}</td>
                             <td>${r.email}</td>
                             <td>${r.typListka}</td>
@@ -90,8 +91,8 @@
                                 ${r.stav === "REZERVOVANY" ? `<button class="button" style="padding: 0.25rem 0.75rem;" onclick="confirmPayment('${r.id}')">Zaplatiť</button>` : ""}
                             </td>
                         `;
-                tbody.appendChild(tr);
-            });
+            tbody.appendChild(tr);
+        });
     }
 
     async function confirmPayment(id) {
