--- a/src/main/resources/templates/mail/potvrdenie-rezervacie.html
+++ b/src/main/resources/templates/mail/potvrdenie-rezervacie.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="sk" xmlns:th="http://www.thymeleaf.org">
 <head>
-<style>
-    .button {
-        display: inline-block;
-        padding: 0.75rem 1.25rem;
-        border-radius: 15px;
+    <style>
+        .button {
+            display: inline-block;
+            padding: 0.75rem 1.25rem;
+            border-radius: 15px;
 
-        background: #2864f0;
-        color: #fafafa;
-        text-decoration: none;
+            background: #2864f0;
+            color: #fafafa;
+            text-decoration: none;
 
-        cursor: pointer;
-        transition: background 0.25s ease;
-    }
-</style>
+            cursor: pointer;
+            transition: background 0.25s ease;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,17 +24,19 @@
 
 <p>Ďakujeme za tvoju rezerváciu lístka na OĽV.</p>
 
-    <p th:if="${dobrovolnik != null && dobrovolnik}">
-        Lístok máš úspešne rezervovaný &ndash; <strong>stačí si ho prísť vyzdvihnúť do UPeCe.</strong><br>
-        Môžeš tak urobiť buď na dobrovoľníckom stretku alebo od pondelka 17.11.2025 do štvrtku 27.11.2025 každý <strong>pracovný deň 30 minút po svätej omši</strong> v
-        Libresse.
-    </p>
+<p th:if="${dobrovolnik != null && dobrovolnik}">
+    Lístok máš úspešne rezervovaný &ndash; <strong>stačí si ho prísť vyzdvihnúť do UPeCe.</strong><br>
+    Môžeš tak urobiť buď na dobrovoľníckom stretku alebo od pondelka 17.11.2025 do štvrtku 27.11.2025 každý <strong>pracovný
+    deň 30 minút po svätej omši</strong> v
+    Libresse.
+</p>
 
-    <p th:if="${dobrovolnik == null || !dobrovolnik}">
-        Lístok máš úspešne rezervovaný &ndash; <strong>stačí si ho prísť vyzdvihnúť do UPeCe.</strong><br>
-        Môžeš tak urobiť od pondelka 17.11.2025 do štvrtku 27.11.2025 každý <strong>pracovný deň 30 minút po svätej omši</strong> v
-        Libresse.
-    </p>
+<p th:if="${dobrovolnik == null || !dobrovolnik}">
+    Lístok máš úspešne rezervovaný &ndash; <strong>stačí si ho prísť vyzdvihnúť do UPeCe.</strong><br>
+    Môžeš tak urobiť od pondelka 17.11.2025 do štvrtku 27.11.2025 každý <strong>pracovný deň 30 minút po svätej
+    omši</strong> v
+    Libresse.
+</p>
 
 <p>Nezabudni, že <strong>platba je možná len v hotovosti</strong>!</p>
 
