fix admin filtrov

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -93,6 +93,7 @@
                         `;
             tbody.appendChild(tr);
         });
+        runFilter();
     }
 
     async function confirmPayment(id) {
