--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -19,11 +19,17 @@
 
     <input type="text" id="search" placeholder="Vyhľadať podľa mena alebo priezviska...">
 
-    <label class="toggle-line" style="margin-top: 0;">
+    <label class="toggle-line" style="margin-top: 0">
         <input type="checkbox" id="filter-nezaplatene" checked>
         <span class="toggle"></span>
         <span class="text">Zobraziť iba nezaplatené</span>
     </label>
+    <p>Aktuálna obsadenosť účastníkov: <strong
+            th:text="${pocetObsadenych + '/' + maxPocet}">20/54</strong></p>
+    <p>Počet dobrovoľníkov: <strong
+            th:text="${pocetDobrovolnikov}">20/54</strong></p>
+    <p>Počet teamákov: <strong
+            th:text="${pocetTeamakov}">20/54</strong></p>
 
     <table id="reservations">
         <colgroup>
