--- a/src/main/resources/templates/admin/qr_reader.html
+++ b/src/main/resources/templates/admin/qr_reader.html
@@ -24,7 +24,10 @@
         if (!response.ok) {
             return
         }
-        const qrKod = confirm("QR kód načítaný: " + response.json().meno);
+
+        responseListok = response.json();
+
+        const qrKod = confirm("QR kód načítaný: " + responseListok.email);
 
         if (!qrKod) {
             return
@@ -40,7 +43,7 @@
     }
 
     const html5QrCode = new Html5Qrcode("reader");
-    const config = {fps: 10, qrbox: 250};
+    const config = {fps: 10, qrbox: 500};
 
     Html5Qrcode.getCameras().then(cameras => {
         if (cameras && cameras.length) {
