fix vypísania mailu

--- a/src/main/resources/templates/admin/qr_reader.html
+++ b/src/main/resources/templates/admin/qr_reader.html
@@ -25,7 +25,7 @@
             return
         }
 
-        responseListok = response.json();
+        const responseListok = response.json();
 
         const qrKod = confirm("QR kód načítaný: " + responseListok.email);
 
