fix vypísania mailu

--- a/src/main/resources/templates/admin/qr_reader.html
+++ b/src/main/resources/templates/admin/qr_reader.html
@@ -27,7 +27,7 @@
 
         const responseListok = response.json();
 
-        const qrKod = confirm("QR kód načítaný: " + responseListok.email);
+        const qrKod = confirm("QR kód načítaný: " + responseListok);
 
         if (!qrKod) {
             return
