--- a/src/main/resources/templates/admin/qr_reader.html
+++ b/src/main/resources/templates/admin/qr_reader.html
@@ -57,7 +57,8 @@
     const html5QrCode = new Html5Qrcode("reader");
     const config = {fps: 10, qrbox: 500};
 
-    function zmenKameru(){
+    async function zmenKameru(){
+        await html5QrCode.stop();
         Html5Qrcode.getCameras().then(cameras => {
             if (cameras && cameras.length) {
                 if (cameras.length > camId + 1) {
