--- a/src/main/resources/templates/admin/registracia.html
+++ b/src/main/resources/templates/admin/registracia.html
@@ -16,6 +16,15 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required>
 
+        <div>
+            <input type="radio" name="typ" value="ADMIN" id="admin" style="display: inline-block">
+            <label for="admin" style="display: inline-block">ADMIN</label>
+        </div>
+        <div>
+            <input type="radio" name="typ" value="VSTUP" id="vstup" style="display: inline-block">
+            <label for="vstup" style="display: inline-block">VSTUP</label>
+        </div>
+
         <button class="button" style="width: 100%; text-align: center;" type="submit">Registrovať</button>
     </form>
 </div>
