nastavená vstup rola ako default

--- a/src/main/resources/templates/admin/registracia.html
+++ b/src/main/resources/templates/admin/registracia.html
@@ -21,7 +21,7 @@
             <label for="admin" style="display: inline-block">ADMIN</label>
         </div>
         <div>
-            <input type="radio" name="typ" value="VSTUP" id="vstup" style="display: inline-block">
+            <input type="radio" name="typ" value="VSTUP" id="vstup" style="display: inline-block" checked>
             <label for="vstup" style="display: inline-block">VSTUP</label>
         </div>
 
