prelink z admina na vstup

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -10,6 +10,9 @@
 <body>
 <div class="obal" style="min-width: 824px;">
     <h1>Administrácia rezervácií</h1>
+    <a class="button" href="/vstup">
+        Prejdi na predaj lístkov
+    </a>
     <div class="admin-info">
         Prihlásený ako: <strong th:text="${user}">admin@upc.sk</strong> |
         <a href="/logout">
